iotdemo-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iotdemo-app
  annotations:
    argocd.argoproj.io/hook: PreSync
