iotdemo-app/consumer-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-app
  labels:
    app: iot-demo
  argocd.argoproj.io/hook: PostSync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-demo
  template:
    metadata:
      labels:
        app: iot-demo
        name: consumer-app
    spec:
      containers:
        - name: consumer-app
          image: strimzilab/consumer-app:latest
