iotdemo-app/stream-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-app
  labels:
    app: iot-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iot-demo
  template:
    metadata:
      labels:
        app: iot-demo
        name: stream-app
    spec:
      containers:
        - name: stream-app
          image: strimzilab/stream-app:latest
