iotdemo-app/consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-demo
    name: consumer-app
  name: consumer-app
  annotations:
    argocd.argoproj.io/hook: PreSync
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: consumer-app
